cluster/manifests/ingress/base/alb-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-nginx-ingress
  namespace: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: alb-nginx-updated
    alb.ingress.kubernetes.io/group.name: curibio-group
    alb.ingress.kubernetes.io/healthcheck-path: /nginx-ready
    alb.ingress.kubernetes.io/healthcheck-port: "8081"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "*.curibio-test.com"
  defaultBackend:
    service:
      name: nginx-ingress
      port:
        number: 80
